--- a/metadata.yaml
+++ b/metadata.yaml
@@ -2,7 +2,7 @@ composer: Gassmann, Florian Leopold
 title: Requiem
 id: KosG 6
 genre: requiem
-scoring: S, A, T, B (solo), S, A, T, B (coro), 2 ob, 2 clno (C), 2 vl, vla, b, org
+scoring: S, A, T, B (solo), S, A, T, B (coro), 2 ob, 2 trb, 2 vl, vla, b, org
 sources:
   1:
     siglum: F-Pn
