--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,23 +1,24 @@
-composer: Gassmann, Florian Leopold
+composer:
+  last: Gassmann
+  first: Florian Leopold
 title: Requiem
 id: KosG 6
 genre: requiem
 scoring: S, A, T, B (coro), 2 ob, 2 trb, 2 vl, vla, b, org
+license: cc-by-nc-sa-4.0
 sources:
-  1:
+  B1:
     siglum: F-Pn
     shelfmark: D-4346
-    type: manuscript copy
     date: 1774–1800
     rism: 840016334
     url: https://gallica.bnf.fr/ark:/12148/btv1b525136899/
-  2:
+    license: custom (free for non-commercial purposes)
+    principal: true
+  B2:
     siglum: F-Pn
     shelfmark: D-14807
-    type: manuscript copy
     date: 1800–1830
-    rism:
     url: https://gallica.bnf.fr/ark:/12148/btv1b52513401n/
-github: gassmann-requiem
+    license: custom (free for non-commercial purposes)
 imslp: Requiem_(Gassmann,_Florian_Leopold)
-notes:
